@@ -1,6 +1,7 @@
 package net.dorokhov.pony3.core.config.service;
 
 import com.google.common.base.Strings;
+import jakarta.annotation.Nullable;
 import net.dorokhov.pony3.api.config.domain.Config;
 import net.dorokhov.pony3.api.config.service.ConfigService;
 import net.dorokhov.pony3.common.JsonConverter;
@@ -8,11 +9,9 @@ import net.dorokhov.pony3.core.config.repository.ConfigRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import jakarta.annotation.Nullable;
 import java.io.File;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 
@@ -60,7 +59,7 @@ public class ConfigServiceImpl implements ConfigService {
     public void saveLibraryFolders(List<File> files) {
         String value = JsonConverter.toJson(files.stream()
                 .map(File::getPath)
-                .collect(Collectors.toList()));
+                .toList());
         Config config = configRepository.findById(CONFIG_LIBRARY_FOLDERS)
                 .orElseGet(() -> new Config().setId(CONFIG_LIBRARY_FOLDERS));
         config.setValue(Strings.emptyToNull(value));
